[package]
name = "luftweht"
version = "0.1.0"
edition = "2021"
authors = ["Donovan Jasper <donovan@joinformal.com>"]
description = "Intelligent network scanner with phased discovery and info gathering"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Networking
ipnetwork = "0.20"
trust-dns-resolver = "0.23"
pnet = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress bars
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rate limiting
governor = "0.6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
nix = { version = "0.27", features = ["user"] }
